<resources>
    <string name="infinity">&#8734;</string>
    <string name="estimation_solar_panel_title">Solar panel</string>
    <string name="estimation_walking_title">Walking</string>
    <string name="estimation_cycling_title">Cycling</string>
    <string name="estimation_electric_car_title">Electric car</string>
    <string name="carbon_footprint_name">Carbon footprint</string>
    <string name="carbon_footprint_unit">kgCO&#x2082;</string>
    <string name="carbon_footprint_default">-- kgCO&#x2082;</string>
    <string name="expenses_name">Expenses</string>
    <string name="expenses_unit">kr</string>
    <string name="expenses_explanation">The costs are a sum of your energy costs, your car fuel costs and the fixed costs your car produces, like insurance and value depreciation.</string>
    <string name="calories_name">Calories</string>
    <string name="calories_unit">kCal</string>
    <string name="calories_explanation">Your calorie consumption. The more you walk or cycle instead of driving, the more you will burn.</string>
    <string name="active_minutes_name">Active minutes</string>
    <string name="active_minutes_unit">min</string>
    <string name="active_minutes_explanation">Active minutes are minutes during the day that you are not sitting still. It is recommended that you are active for at least 30 minutes each day.</string>
    <string name="energy_consumption_name">Energy consumption</string>
    <string name="energy_consumption_unit">kWh</string>
    <string name="energy_consumption_explanation">The total amount of energy/heat your house needs in kWh. The outside temperature determines how much heat you will need to keep it warm.</string>
    <string name="distance_name">Driving distance</string>
    <string name="distance_unit">km</string>
    <string name="driving_explanation">This is the average distance you have driven in the given period.</string>
    <string name="information_co2_left_default">You have -- kgCO&#x2082; left!</string>
    <string name="information_co2_left_default2">-- kgCO&#x2082; left until you have exceeded the daily limit!</string>
    <string name="information_co2_left">You have %1$s kgCO&#x2082; left!</string>
    <string name="information_co2_left2">%1$s kgCO&#x2082; left until you have exceeded the daily limit!</string>
    <string name="information_savings">%1$s daily savings</string>
    <string name="information_days_left_solar_panel">%1$s days to finance your solar roof</string>
    <string name="information_own_energy">%1$s your own energy</string>
    <string name="app_name">Smiling Earth</string>
    <string-array name="time_spinner_array">
        <item>TODAY</item>
        <item>THIS WEEK</item>
        <item>THIS MONTH</item>
    </string-array>
    <string-array name="history_array">
        <item>Carbon footprint</item>
        <item>Transportation</item>
        <item>Energy consumption</item>
    </string-array>
    <string name="register_housing_description">The type of energy you use for heating and the efficiency of your heating system determine 80% of your carbon footprint from energy consumption. The building year and the year of the last renovation of the house, also affect the housing emissions.</string>
    <string name="register_transportation_description">Your vehicle is a major source of greenhouse gas emissions. Cycling or walking instead of driving will save you money, give you health benefits, and reduce your carbon footprint.</string>
    <string name="register_activity_description">Finally, to monitor your health gains </string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Welcome!</string>
    <string name="slide_1_desc">By 2030 greenhouse gas emissions will have to be cut by 40%.</string>
    <string name="slide_2_desc">Energy consumption and transport contribute over one half of total greenhouse gas emissions. </string>
    <string name="slide_3_desc">But they are also the easiest to control.</string>
    <string name="slide_4_desc">This app helps you monitor the emissions produced by your energy consumption and your driving.</string>
    <string name="slide_5_desc">Try and see if you can reduce your daily emissions by 40%.</string>
    <string name="slide_6_desc">The app will show you how much this can cost you or how much you can actually save doing it.</string>
    <string name="slide_7_title">Enjoy!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_history">History</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_information">How does this app work?</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Settings</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="pref_title_personal">Personal Settings</string>
    <string name="pref_personal_name">Name</string>
    <string name="pref_personal_email">Email</string>
    <string name="pref_personal_password">Password</string>
    <string name="pref_personal_gender">Gender</string>
    <string name="pref_personal_age">Age</string>
    <string name="pref_personal_weight">Weight</string>
    <string name="pref_personal_address">Address</string>
    <string name="pref_personal_zip_code">Zip code</string>
    <string name="pref_personal_city">City</string>
    <string name="pref_personal_b_year">Building year</string>
    <string name="pref_personal_r_year">Renovation year</string>
    <string name="pref_personal_dialog_name">Please enter your name</string>
    <string name="pref_personal_dialog_email">Please enter your email</string>
    <string name="pref_personal_dialog_password">Please enter your password</string>
    <string name="pref_personal_dialog_age">Please enter your age</string>
    <string name="pref_personal_dialog_weight">Please enter your weight</string>
    <string name="pref_personal_dialog_address">Please enter your address</string>
    <string name="pref_personal_dialog_zip_code">Please enter your zip code</string>
    <string name="pref_personal_dialog_city">Please enter your city</string>
    <string name="pref_personal_summary_name">Please enter your name</string>
    <string name="pref_personal_summary_email">Please enter your email</string>
    <string name="pref_personal_summary_password">Please enter your password</string>
    <string name="pref_personal_summary_age">Please enter your age</string>
    <string name="pref_personal_summary_weight">Please enter your weight</string>
    <string name="pref_personal_summary_address">Please enter your address</string>
    <string name="pref_personal_summary_zip_code">Please enter your zip code</string>
    <string name="pref_personal_summary_city">Please enter your city</string>
    <string name="pref_personal_summary_b_year">Please enter the building year of where you live</string>
    <string name="pref_personal_summary_r_year">Please enter the renovation year of where you live</string>
    <string name="pref_title_heat">Primary Heating System</string>
    <string-array name="pref_heat_type_list">
        <item>Electric (resistance)</item>
        <item>Heat pump</item>
        <item>Gas</item>
        <item>Oil</item>
        <item>Wood</item>
    </string-array>
    <string name="pref_heat_type">What type of heating do you have where you live?</string>
    <string name="pref_heat_efficiency">System efficiency (%)</string>
    <string name="pref_heat_fuel_cost">Fuel cost</string>
    <string name="pref_heat_prev_yr">Consumption last year</string>
    <string name="pref_key_heat_type">pref_key_heat_type</string>
    <string name="pref_key_heat_efficiency">pref_key_heat_efficiency</string>
    <string name="pref_key_heat_fuel_cost">pref_key_heat_fuel_cost</string>
    <string name="pref_key_heat_prev_yr">pref_key_heat_prev_yr</string>
    <string name="pref_dialog_heat_type">Please enter fuel type</string>
    <string name="pref_dialog_heat_efficiency">Please enter system efficiency</string>
    <string name="pref_dialog_heat_fuel_cost">Please enter fuel cost</string>
    <string name="pref_dialog_heat_prev_yr">Please enter consumption last year</string>
    <string name="pref_summary_heat_type">Please enter fuel type</string>
    <string name="pref_summary_heat_efficiency">Please enter system efficiency</string>
    <string name="pref_summary_heat_fuel_cost">Please enter fuel cost</string>
    <string name="pref_summary_heat_prev_yr">Please enter consumption last year</string>
    <string name="pref_default_heat_fuel_type">Electric (resistance)</string>
    <string name="pref_default_heat_efficiency">Please enter efficiency</string>
    <string name="pref_default_heat_fuel_cost">Please enter fuel cost</string>
    <string name="pref_default_heat_prev_yr">Please enter consumption for previous year</string>
    <string name="pref_default_b_year">"1961 - 1970"</string>
    <string name="pref_default_r_year">"2011 - 2015"</string>
    <string name="pref_title_car">Car Settings</string>
    <string name="pref_title_car_2">Car Nr. 2 Settings</string>
    <string name="pref_car_owner">Car owner</string>
    <string name="pref_car_distance">Yearly driving distance (km)</string>
    <string name="pref_car_regnr">License plate (Reg. nr.)</string>
    <string name="pref_car_fuel_consumption">Average consumption (litre pr. 10km)</string>
    <string name="pref_car_year_produced">Production year</string>
    <string name="pref_car_ownership_period">Planned duration of ownership (years)</string>
    <string name="pref_car_price">Car value</string>
    <string name="pref_car_fuel">Fuel type</string>
    <string name="pref_car_dialog_distance">Please enter yearly driving distance</string>
    <string name="pref_car_dialog_regnr">Please enter your license plate (reg. nr.)</string>
    <string name="pref_car_dialog_fuel_consumption">Please enter fuel consumption</string>
    <string name="pref_car_dialog_year_produced">Please enter production year</string>
    <string name="pref_car_dialog_ownership_period">Please enter planned duration of ownership</string>
    <string name="pref_car_dialog_price">Please enter car value</string>
    <string name="pref_car_dialog_fuel">Please enter fuel type</string>
    <string name="pref_car_summary_distance">Please enter yearly driving distance</string>
    <string name="pref_car_summary_regnr">Please enter your license plate (Reg. nr.)</string>
    <string name="pref_car_summary_year_produced">Please enter production year</string>
    <string name="pref_car_summary_ownership_period">Please enter planned duration of ownership</string>
    <string name="pref_car_summary_price">Please enter car value</string>
    <string name="pref_car_summary_fuel">Please enter fuel type</string>
    <string name="pref_car_default_fuel">Gasoline</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_name">Name</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login_welcome">Welcome!</string>
    <string name="login_new_user">New user? Click button to sign up.</string>
    <string name="login_already_user">Already a user? Use the fields below to sign in.</string>
</resources>